# example-agent

./: .gitignore  life_coach.py  main.ipynb  my_goals.txt  pyproject.toml  requirements.txt  restaurant_bot.py  setup_vector_store.py
storybook/: agent.py
storybook/.adk/artifacts/users/user/sessions/5277ee9c-7b9f-49b0-a0ca-86ce205890ea/artifacts/page_1.png/versions/0/: metadata.json
storybook/.adk/artifacts/users/user/sessions/5277ee9c-7b9f-49b0-a0ca-86ce205890ea/artifacts/page_1.png/versions/1/: metadata.json
storybook/.adk/artifacts/users/user/sessions/5277ee9c-7b9f-49b0-a0ca-86ce205890ea/artifacts/page_1.png/versions/2/: metadata.json
storybook/.adk/artifacts/users/user/sessions/5277ee9c-7b9f-49b0-a0ca-86ce205890ea/artifacts/page_1.png/versions/3/: metadata.json
storybook/.adk/artifacts/users/user/sessions/5277ee9c-7b9f-49b0-a0ca-86ce205890ea/artifacts/page_1.png/versions/4/: metadata.json
storybook/.adk/artifacts/users/user/sessions/5277ee9c-7b9f-49b0-a0ca-86ce205890ea/artifacts/page_2.png/versions/0/: metadata.json
storybook/.adk/artifacts/users/user/sessions/5277ee9c-7b9f-49b0-a0ca-86ce205890ea/artifacts/page_2.png/versions/1/: metadata.json
storybook/.adk/artifacts/users/user/sessions/5277ee9c-7b9f-49b0-a0ca-86ce205890ea/artifacts/page_2.png/versions/2/: metadata.json
storybook/.adk/artifacts/users/user/sessions/5277ee9c-7b9f-49b0-a0ca-86ce205890ea/artifacts/page_2.png/versions/3/: metadata.json
storybook/.adk/artifacts/users/user/sessions/5277ee9c-7b9f-49b0-a0ca-86ce205890ea/artifacts/page_2.png/versions/4/: metadata.json
(+15 files in other folders)
