[project]
name = "my-first-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-adk>=2.3.0",
    "litellm>=1.90.2",
    "openai>=1.98.0",
    "openai-agents>=0.17.5",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
]
